# corpusforge

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  sonar-project.properties
.github/workflows/: ci.yml  sonarqube.yml  tests.yml
crates/corpusforge-cff/: Cargo.toml
crates/corpusforge-cff/src/: lib.rs
crates/corpusforge-cli/: Cargo.toml
crates/corpusforge-cli/src/: lib.rs  main.rs
crates/corpusforge-cli/tests/: cli_binary.rs
crates/corpusforge-core/: Cargo.toml
crates/corpusforge-core/src/: golden.rs  lib.rs  metadata.rs  output.rs  rng.rs  seed.rs  weighted.rs
crates/corpusforge-grammar/: Cargo.toml
crates/corpusforge-grammar/src/: lib.rs
crates/corpusforge-ngram/: Cargo.toml
crates/corpusforge-ngram/src/: lib.rs
crates/corpusforge-profile/: Cargo.toml
crates/corpusforge-profile/src/: lib.rs
crates/corpusforge-shrink/: Cargo.toml
crates/corpusforge-shrink/src/: lib.rs
crates/corpusforge-testkit/: Cargo.toml
crates/corpusforge-testkit/src/: lib.rs
crates/corpusforge-tokenizer/: Cargo.toml
crates/corpusforge-tokenizer/src/: lib.rs
crates/corpusforge-unicode/: Cargo.toml
crates/corpusforge-unicode/src/: lib.rs
docs/: agent-workflow.md  architecture.md  benchmarks.md  determinism.md  grammar-workflow.md  roadmap.md  tokenizer-workflow.md
examples/: README.md  reject_invalid_utf8.rs  reject_malformed_json.rs  reject_open_markdown_fence.rs
tests/fixtures/: basic_ascii.txt  basic_unicode.txt
tests/golden/: README.md  seed_1337_repository_fixtures_ngram.hex  seed_1337_stream_ngram.hex  seed_1337_stream_unicode.hex  seed_1337_unicode_raw_bytes_invalid_utf8.hex  seed_1337_unicode_raw_bytes_mixed.hex  seed_1337_unicode_valid_text_grapheme.hex  seed_1337_unicode_valid_text_mixed.hex  seed_1337_weighted_choice_sequence.txt
