[package]
name = "corpusforge-cff"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CorpusForge profile format placeholders"

[dependencies]
blake3 = "1.5.5"
corpusforge-core = { path = "../corpusforge-core" }

[lints]
workspace = true
