[package]
name = "corpusforge-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CorpusForge command line interface placeholder"

[dependencies]
corpusforge-cff = { path = "../corpusforge-cff" }
corpusforge-core = { path = "../corpusforge-core" }
corpusforge-ngram = { path = "../corpusforge-ngram" }
corpusforge-profile = { path = "../corpusforge-profile" }

[[bin]]
name = "corpusforge"
path = "src/main.rs"

[lints]
workspace = true
