[package]
name = "corpusforge-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CorpusForge command line interface placeholder"

[dependencies]
corpusforge-cff = { path = "../corpusforge-cff" }
corpusforge-core = { path = "../corpusforge-core" }
corpusforge-ngram = { path = "../corpusforge-ngram" }
corpusforge-profile = { path = "../corpusforge-profile" }
corpusforge-tokenizer = { path = "../corpusforge-tokenizer" }

[dev-dependencies]
corpusforge-testkit = { path = "../corpusforge-testkit" }

[[bin]]
name = "corpusforge"
path = "src/main.rs"

[lints]
workspace = true
