[package]
name = "corpusforge-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CorpusForge shared core placeholders"

[dependencies]
blake3 = "1.5"
rand_chacha = "0.3"
rand_core = "0.6"

[dev-dependencies]
corpusforge-testkit = { path = "../corpusforge-testkit" }

[lints]
workspace = true
