[package]
name = "corpusforge-profile"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CorpusForge profile compiler placeholders"

[dependencies]
corpusforge-cff = { path = "../corpusforge-cff" }
corpusforge-core = { path = "../corpusforge-core" }

[lints]
workspace = true
