[package]
name = "corpusforge-shrink"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CorpusForge shrinking placeholders"

[dependencies]
corpusforge-core = { path = "../corpusforge-core" }

[lints]
workspace = true
